--- a/css/blocks/front-screen.css
+++ b/css/blocks/front-screen.css
@@ -1,14 +1,15 @@
 .front-screen {
+  height: calc(var(--vh, 1vh) * 100);
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   font-size: 16px;
-  padding-bottom: 5em;
   color: var(--c-regular);
   background-repeat: no-repeat;
   background-position: right bottom;
   background-size: 200px;
+  overflow-x: hidden;
 
   @media screen and (min-width: 576px) {
     background-size: 300px;
