--- a/css/general.css
+++ b/css/general.css
@@ -1,6 +1,12 @@
-body {
-  font-family: var(--f-main);
+html {
+  height: 100%;
+  width: 100%;
   overflow-x: hidden;
+}
+
+body {
+  height: 100%;
+  font-family: var(--f-main);
 }
 
 body.is-open {
